# ttyvid

./: .gitignore  CHANGELOG.md  Cargo.toml  GPU_ACCELERATION_ANALYSIS.md  GPU_IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile.fonts  README.md  build.rs  test_batch_gpu.sh  test_font_debug.mk
assets/: animated-demo.cast
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: index.ts
src/: lib.rs  main.rs  mcp_server.rs
src/assets/: mod.rs
src/cli/: mod.rs
src/encoder/: gif_encoder.rs  mod.rs  webm_encoder.rs
src/font_tools/: font.rs  font_card.rs  font_converter.rs  mod.rs  truetype_font.rs
src/input/: mod.rs
src/palette_tools/: mod.rs  palette_card.rs
src/recorder/: capture.rs  mod.rs  pty.rs  writer.rs
src/renderer/: canvas.rs  colors.rs  font.rs  gpu_renderer.rs  mod.rs  truetype_font.rs
src/renderer/shaders/: render.wgsl
src/terminal/: cell.rs  grid.rs  mod.rs  parser.rs  state.rs
src/theme/: layers.rs  mod.rs
test_output/: liberation_mono.fd  simple.cast  test_tight_font.cast
themes/: README.md  bar.yaml  default-2bit.yaml  default-4bit.yaml  default.yaml  fdwm-x.yaml  fdwm.yaml  game.yaml  mac.yaml  opensource.yaml  scripted.yaml  simple.yaml  terminal_output.yaml  windows7.yaml
themes/font_Ext/: Adwaita_Mono_16.fd  Liberation_Mono_16.fd  Noto_Emoji_16.fd  Noto_Sans_Mono_16.fd  README.md  Source_Code_Pro_16.fd  Symbola_16.fd
tools/: make_transparent.py  migrate_themes.py  test_terminal.py
