[package]
name = "ttygif-rust"
version = "0.1.0"
edition = "2021"

[features]
default = []
webm = ["rav1e"]

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Terminal emulation - regex for ANSI parsing
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

# Image processing
image = "0.25"
gif = "0.13"

# Video encoding - pure Rust AV1 encoder + native WebM/Matroska muxer
rav1e = { version = "0.7", optional = true }

# Parallelism
rayon = "1.10"
num_cpus = "1.16"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# JSON/YAML parsing (for asciicast and themes)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Bitflags for cell flags
bitflags = "2.6"

# Cross-platform directory paths
directories = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
