[package]
name = "ttyvid"
version = "0.2.1"
edition = "2021"
authors = ["Chris Watkins <chris@watkinslabs.com>"]
description = "Convert terminal recordings to video (GIF/WebM) with embedded fonts, themes, and MCP server for AI assistants"
license = "MIT"
repository = "https://github.com/watkinslabs/ttyvid"
homepage = "https://github.com/watkinslabs/ttyvid"
readme = "README.md"
keywords = ["terminal", "asciinema", "gif", "video", "mcp"]
categories = ["command-line-utilities", "multimedia::video"]

[[bin]]
name = "ttyvid"
path = "src/main.rs"

[[bin]]
name = "font_debug"
path = "src/bin/font_debug.rs"

[features]
default = ["webm"]
webm = ["rav1e"]

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Terminal emulation - regex for ANSI parsing
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

# Image processing
image = "0.25"
gif = "0.13"

# Font rendering for TrueType/OpenType fonts
fontdue = "0.9"
font-kit = "0.14"
ttf-parser = "0.24"

# Video encoding - pure Rust AV1 encoder + native WebM/Matroska muxer
rav1e = { version = "0.7", optional = true }

# Parallelism
rayon = "1.10"
num_cpus = "1.16"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# JSON/YAML parsing (for asciicast and themes)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Bitflags for cell flags
bitflags = "2.6"

# Cross-platform directory paths
directories = "5.0"

# Recording functionality
portable-pty = "0.8"
crossterm = "0.28"
chrono = "0.4"

# MCP server
rust-mcp-sdk = { version = "0.7", features = ["server", "stdio", "macros"] }
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
